update register mechanism
